2000-10-12  Edward Avis,  <epa98@texel02>

	* uk_tz.pl: Sanity checks

	* getlistings_uk_ananova:
	special_4learning(): don't treat '1944' as a time

2000-10-10  Edward Avis,  <epa98@texel02>

	* xmltv.dtd: Update version number to 0.3

	* filter_shown:
	Suppress 'no stop time' warning once for each channel - to handle sort_listings output without complaining

	* sort_listings, pick_cgi, listings_to_latex, getlistings_uk_ananova, getlistings_nl, getlistings_ca:
	Declare subroutine prototypes to avoid perl 5.6 warning

2000-10-09  Edward Avis,  <epa98@texel02>

	* doc.html: New file.

	* getlistings_ca: Small tidy for xmltv-0.2

	* getlistings_uk_ananova: Comment out / remove trace code for release

	* listings_to_latex:
	Quote title with quote() as well as converting it to Latin-1

	* getlistings_nl: Handle &auml; in HTML

	* README: Updated message for xmltv-0.2

	* getlistings_nl, getlistings_ca: New file.

	* listings_to_latex:
	Quote characters for LaTeX using quote() copied from dtd2latex

2000-10-06  Edward Avis,  <epa98@texel02>

	* pick_cgi: Make backup of tvprefs before overwriting

	* uk_channels.xml: New file.

	* uk_tz.pl: Comment changes

	* sort_listings: Better error message

	* getlistings_uk_ananova: Improve 'presenter' desc-processing

2000-10-05  Edward Avis,  <epa98@texel02>

	* listings_to_latex:
	Convert internal channel names to channel numbers (for UK anyway)

	* getlistings_uk_ananova:
	Use DNS-style internal channel names, eg bbc1.bbc.co.uk

	* getlistings_uk_ananova:
	get_cache() removed, replaced with Memoized, Memoize::Expired get()

2000-10-04  Edward Avis,  <epa98@texel02>

	* sort_listings: Handle clumpidx

	* getlistings_uk_ananova:
	Use clumpidx for several programmes sharing a timeslot

	* xmltv.dtd:
	Added clumpidx attribute of programme for 'News; Weather' type situations

	* xmltv.dtd:
	Add <guest> under <credits>; make clear that credits are in decreasing order of importance

	* xmltv.dtd: