@@ -1,4 +1,4 @@
-XMLTV 0.2.2
+XMLTV 0.2.3
 
 Suite of programs for processing TV listings and organizing your
 viewing.
