@@ -44,9 +44,9 @@
     </p>
     <h2>Getting it</h2>
     <p>
-      The latest version is <strong>0.2.2</strong>.  This is just
-      small bugfixes frm 0.2.  A lot of stuff has been added since
-      0.1.1, in particular the listings-grabbers for Canada and the
+      The latest version is <strong>0.2.3</strong>.  This is just
+      bugfixes from 0.2.  A lot of stuff has been added since 0.1.1,
+      in particular the listings-grabbers for Canada and the
       Netherlands.  (Not everything mentioned above is included in the
       standard xmltv distribution, some of it is downloadable from
       other places.)
@@ -76,7 +76,7 @@
     <p>
       Since you're reading this, you should have already downloaded a
       tarball.  But you can get a new one from <a
-	href="http://www.doc.ic.ac.uk/~epa98/work/apps/xmltv/xmltv-0.2.2.tar.gz">http://www.doc.ic.ac.uk/~epa98/work/apps/xmltv/xmltv-0.2.2.tar.gz</a>.
+	href="http://www.doc.ic.ac.uk/~epa98/work/apps/xmltv/xmltv-0.2.3.tar.gz">http://www.doc.ic.ac.uk/~epa98/work/apps/xmltv/xmltv-0.2.3.tar.gz</a>.
     </p>
     <h3>Installing</h3>
     <p>
@@ -380,7 +380,7 @@
       the EU</a><br>
 <!-- Created: Mon Jul  3 15:46:53 BST 2000 -->
 <!-- hhmts start -->
-Last modified: Thu Oct 12 14:50:50 BST 2000
+Last modified: Thu Oct 12 15:12:26 BST 2000
 <!-- hhmts end -->
   </body>
 </html>
