@@ -71,11 +71,7 @@
 # -- Ed Avis, epa98@doc.ic.ac.uk, 2000-06-30
 #  
 
-
 use strict;
-use lib '/homes/epa98/lib/perl5/';
-use lib '/homes/epa98/lib/perl5/site_perl';
-use lib '/homes/epa98/lib/perl5/site_perl/5.005';
 use CGI qw<:standard -newstyle_urls>;
 use CGI::Carp qw<fatalsToBrowser carpout>; BEGIN { carpout(\*STDOUT) }
 use XML::Simple;
@@ -105,7 +101,7 @@ my $PREFS_FILE = 'tvprefs';
 # Prototype declarations
 sub store_prefs($$);
 sub display_form($);
-sub print_date_for($$;);                                                 
+sub print_date_for($;$);                                                 
 
 # Keep the taint checking happy (the Cwd module runs pwd(1))
 $ENV{PATH} = '/bin:/usr/bin';
@@ -418,7 +414,7 @@ sub display_form($) {
 # Printing the date also (at least ATM) ends the current HTML table
 # and begins a new one after the date.
 # 
-sub print_date_for($$;) {
+sub print_date_for($;$) {
 #    local $Dbg::On = 0;
     die 'usage: print_date_for(programme, [prev programme])'
       unless 1 <= @_ and @_ < 3;
