@@ -1,5 +1,7 @@
 2000-10-12  Edward Avis,  <epa98@texel02>
 
+	* pick_cgi: Fix prototypes; remove references to /homes/epa98
+
 	* uk_tz.pl: Sanity checks
 
 	* getlistings_uk_ananova:
